--- a/src/App.css
+++ b/src/App.css
@@ -76,16 +76,11 @@ body {
 	line-height: 1;
   font-family: Poppins, sans-serif;
   font-weight: 400;
+  background: #dedede;
 }
 .section {
   height: 100vh;
-  border: 1px solid blue;
-}
-.container {
-  border: 2px solid brown;
-}
-.container-fluid {
-  border: 2px solid brown;
+  border-top: 1px solid red;;
 }
 #navbar {
   display: flex;
@@ -99,7 +94,7 @@ body {
   top: 0;
   right: -250px;
   z-index: 99;
-  background-color: lightgray;
+  background-color: #f5f5f5;
 }
 #navbar li {
   font-size: 3rem;
@@ -107,45 +102,101 @@ body {
   cursor: pointer;
 }
 .prof-pic {
-  width: 200px;
-  height: 200px;
-  border: 10px solid black;
+  width: 250px;
+  height: 250px;
+  border: 7px solid black;
   border-radius: 50%;
+  background: white;
 }
-.home {
-  background: lightgray;
-}
-.home-title {
-  font-size: 3.2rem;
-  font-weight: 700;
-}
-.home-title div {
+.title-box {
   text-align: right;
-  width: 35rem;
+  border-right: 7px solid black;
+  font-size: 2rem;
+  font-weight: 600;
+  position: relative;
+  width: 30rem;
+  animation-name: grow;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
+  animation-timing-function: linear;
+}
+.title-box > h1:first-child {
+  position: absolute;
+  top: -100rem;
+  right: 10px;
+  animation-name: slideText1;
+  animation-duration: 0.67s;
+  animation-fill-mode: forwards;
+}
+.title-box > h1:nth-child(2) {
+  position: absolute;
+  top: -100rem;
+  right: 10px;
+  animation-name: slideText2;
+  animation-duration: 0.67s;
+  animation-delay: 0.67s;
+  animation-fill-mode: forwards;
+}
+.title-box > h1:nth-child(3) {
+  position: absolute;
+  top: -100rem;
+  right: 10px;
+  animation-name: slideText3;
+  animation-duration: 0.67s;
+  animation-delay: 1.33s;
+  animation-fill-mode: forwards;
 }
 .burger {
   position: fixed;
   top: 25px;
   right: 25px;
   color: black;
-  animation-duration: 0.5s;
+  animation-duration: 0.s;
   cursor: pointer;
   z-index: 100;
-}
-.bar {
-  width: 10px;
-  height: 100px;
-  background-color: black;
 }
 @keyframes slideIn {
   from {right: -250px;
         box-shadow: 0;}
   to {right: 0px;
-      box-shadow: -10px 0 10px black;}
+      box-shadow: -5px 0 10px black;}
 }
 @keyframes slideOut {
   from {right: 0px;
-        box-shadow: -10px 0 10px black;}
+        box-shadow: -5px 0 10px black;}
   to {right: -250px;
       box-shadow: 0}
+}
+@keyframes slideText1 {
+  from {
+    top: -100rem;
+  } to {
+    top: 0rem;
+  }
+}
+@keyframes slideText2 {
+  from {
+    top: -100rem;
+  } to {
+    top: 2.3rem;
+  }
+}
+@keyframes slideText3 {
+  from {
+    top: -100rem;
+  } to {
+    top: 4.7rem;
+  }
+}
+@keyframes grow {
+  from {
+    min-height: 0;
+  } to {
+    min-height: 7rem;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .title-box {
+    font-size: 1.5rem;
+  }
 }
