--- a/src/App.css
+++ b/src/App.css
@@ -80,7 +80,9 @@ body {
 }
 .section {
   height: 100vh;
-  border-top: 1px solid red;;
+}
+.work {
+  position: relative
 }
 #navbar {
   display: flex;
@@ -154,6 +156,8 @@ body {
   animation-duration: 0.s;
   cursor: pointer;
   z-index: 100;
+  box-shadow: 0 0 0 5px #dedede;
+  background-color: #dedede;
 }
 #nav-dot {
   width: 8px;
@@ -161,9 +165,45 @@ body {
   border-radius: 50%;
   background-color: black;
   position: absolute;
-  top: 365px;
+  top: 70px;
   left: -20px;
   transition: top 0.2s;
+}
+.section-title {
+  font-size: 3rem;
+  font-weight: 600;
+  max-height: 3.5rem;
+}
+.cat {
+  display: flex;
+  flex-direction: column;
+}
+.cat-title {
+  font-size: 1.7rem;
+  font-weight: 600;
+  align-self: center;
+  margin: 25px 0;
+}
+.project-box {
+  margin-left: 75px;
+}
+.project-title {
+  font-size: 1.5rem;
+  margin-bottom: 7px;
+}
+.project-thumb {
+  height: 90px;
+  width: 160px;
+  /* border: 1px solid black; */
+  margin-right: 20px;
+}
+.project-links {
+  font-size: 0.8rem;
+  color: black;
+}
+.project-links:hover {
+  text-decoration: underline;
+  color: black;
 }
 @keyframes slideIn {
   from {right: -250px;
@@ -208,5 +248,28 @@ body {
 @media only screen and (max-width: 600px) {
   .title-box {
     font-size: 1.5rem;
+  }
+  .section-title {
+    font-size: 2rem
+  }
+  .project-box {
+    margin-left: 0px
+  }
+  .project-box {
+    margin-left: 75px;
+  }
+  .project-title {
+    font-size: 1.5rem;
+    margin-bottom: 7px;
+  }
+  .project-thumb {
+    height: 60px;
+    width: 90px;
+    /* border: 1px solid black; */
+    margin-right: 10px;
+  }
+  .project-links {
+    font-size: 0.8rem;
+    color: black;
   }
 }
