--- a/src/App.css
+++ b/src/App.css
@@ -186,15 +186,22 @@ body {
 }
 .project-box {
   margin-left: 75px;
+  cursor: pointer;
 }
 .project-title {
   font-size: 1.5rem;
   margin-bottom: 7px;
+  box-shadow: 0;
 }
+
 .project-thumb {
   height: 90px;
   width: 160px;
   margin-right: 20px;
+  transition: box-shadow 2s;
+}
+.project-thumb:hover {
+  box-shadow: 0 0 5px 5px gray;
 }
 .big-thumb {
   height: 270px;
@@ -256,15 +263,101 @@ body {
   background: black;
   transition: width 1s;
 }
+.line-contact {
+  width: 0;
+  height: 2px;
+  margin-top: 5px;
+  background: black;
+  transition: width 1s;
+}
 .about-pic {
   height: 500px;
   width: 300px;
   border: 1px solid black;
 }
+.about p {
+  font-size: 1.1rem;
+  line-height: 1.4rem;
+}
+.contact-info-container {
+  height: 350px;
+}
+.touch {
+  margin-left: 80px;
+  margin-right: -80px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  font-size: 3rem;
+}
+.bar {
+  height: 0;
+  width: 7px;
+  background: black;
+  transition: height 1.8s 0.5s
+}
+.contact-info-box {
+  display: flex;
+  flex-direction: column;
+  align-self: flex-end;
+  margin-left: -80px;
+  font-size: 1.5rem;
+  overflow: hidden;
+  padding: 3px;
+  min-width: 150px;
+}
+.contact-info-box a {
+  display: flex;
+  flex-direction: column;
+  color: black;
+}
+.contact-info-box a:hover {
+  text-decoration: none;
+}
+.touch > h1:nth-child(1) {
+  margin-right: 1000px;
+  transition: margin-right 0.5s 0.5s;
+}
+.touch > h1:nth-child(2) {
+  margin-right: 1000px;
+  transition: margin-right 0.5s 0.7s;
+}
+.touch > h1:nth-child(3) {
+  margin-right: 1000px;
+  transition: margin-right 0.5s 0.9s;
+}
+.touch > h1:nth-child(4) {
+  margin-right: 1000px;
+  transition: margin-right 0.5s 1.1s;
+}
+.phone:nth-child(1) {
+  margin-left: 1000px;
+  transition: margin-left 0.5s 1.3s;
+}
+.phone:nth-child(2) {
+  margin-left: 1000px;
+  transition: margin-left 0.5s 1.4s;
+}
+.phone:nth-child(3) {
+  margin-left: 1000px;
+  transition: margin-left 0.5s 1.5s;
+}
+.email:nth-child(1) {
+  margin-left: 1000px;
+  transition: margin-left 0.4s 1.6s;
+}
+.email:nth-child(2) {
+  margin-left: 1000px;
+  transition: margin-left 0.4s 1.7s;
+}
+.email:nth-child(3) {
+  margin-left: 1000px;
+  transition: margin-left 0.4s 1.8s;
+}
 @keyframes slideIn {
   from {right: -250px;
-        box-shadow: 0;}
-  to {right: 0px;
+    box-shadow: 0;}
+    to {right: 0px;
       box-shadow: -5px 0 10px black;}
 }
 @keyframes slideOut {
@@ -335,5 +428,17 @@ body {
   .big-thumb {
     height: 169px;
     width: 300px;
+  }
+  .contact-info-box {
+    margin-left: -25px;
+    font-size: 1.2rem;
+  }
+  .touch {
+    margin-right: -25px;
+    margin-left: 0;
+    font-size: 2rem;
+  }
+  .contact-info-container > div {
+    height: 255px;
   }
 }
