--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,10 @@ html {
   font-family: 'Poppins-bold';
   src: local('Poppins'), url(./components/assets/fonts/Poppins/Poppins-Bold.ttf);
 }
+@font-face {
+  font-family: 'Roboto';
+  src: local('Roboto'), url(./components/assets/fonts/Poppins/Roboto-Regular.ttf);
+}
 ol, ul {
 	list-style: none;
 }
@@ -83,6 +87,7 @@ body {
 }
 .work {
   position: relative;
+  overflow: hidden;
 }
 #navbar {
   display: flex;
@@ -112,11 +117,18 @@ body {
 }
 .title-box {
   text-align: right;
-  border-right: 7px solid black;
   font-size: 2rem;
   font-weight: 600;
   position: relative;
   width: 30rem;
+  height: 7rem;
+}
+.title-bar-box {
+  height: 7rem;
+}
+.title-bar {
+  width: 7px;
+  background-color: black;
   animation-name: grow;
   animation-duration: 2s;
   animation-fill-mode: forwards;
@@ -190,6 +202,9 @@ body {
   margin-bottom: 7px;
   box-shadow: 0;
 }
+.project-title:hover {
+  text-decoration: underline;
+}
 
 .project-thumb {
   height: 90px;
@@ -200,9 +215,14 @@ body {
 .project-thumb:hover {
   box-shadow: 0 0 5px 5px gray;
 }
+.computer {
+  height: 600px;
+  position: absolute;
+  top: 0;
+}
 .big-thumb {
   height: 270px;
-  width: 480px;
+  /* width: 480px; */
 }
 .project-links {
   font-size: 0.8rem;
@@ -240,6 +260,8 @@ body {
 }
 .project-desc {
   max-width: 650px;
+  font-family: Roboto, sans-serif;
+  line-height: 1.3rem;
 }
 .lang-logo {
   height: 50px;
@@ -277,6 +299,7 @@ body {
 .about p {
   font-size: 1.1rem;
   line-height: 1.4rem;
+  font-family: Roboto, sans-serif;
 }
 .contact-info-container {
   height: 350px;
@@ -353,6 +376,11 @@ body {
   margin-left: 1000px;
   transition: margin-left 0.4s 1.8s;
 }
+.bio-heading {
+  font-family: Poppins, sans-serif;
+  font-size: 1.2rem;
+  font-weight: 600;
+}
 @keyframes slideIn {
   from {right: -250px;
     box-shadow: 0;}
@@ -402,9 +430,6 @@ body {
   }
   .project-box {
     margin-left: 0px
-  }
-  .project-box {
-    margin-left: 75px;
   }
   .project-title {
     font-size: 1.5rem;
