--- a/src/App.css
+++ b/src/App.css
@@ -168,6 +168,8 @@ body {
   animation-duration: 0.s;
   cursor: pointer;
   z-index: 100;
+  background-color: #dedede;
+  transition: background-color 0.5s
 }
 #nav-dot {
   width: 8px;
@@ -205,7 +207,6 @@ body {
 .project-title:hover {
   text-decoration: underline;
 }
-
 .project-thumb {
   height: 90px;
   width: 160px;
@@ -220,9 +221,23 @@ body {
   position: absolute;
   top: 0;
 }
+.mock-box {
+  position: relative;
+  height: 370px;
+  width: 450px;
+  margin-right: 100px;
+}
 .big-thumb {
-  height: 270px;
-  /* width: 480px; */
+  height: 370px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.phone-mock {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  height: 170px;
 }
 .project-links {
   font-size: 0.8rem;
@@ -246,6 +261,10 @@ body {
   border: 3px solid black;
   padding: 25px;
   border-radius: 20px;
+  justify-content: center;
+}
+.preview-title {
+  font-size: 2rem;
 }
 #close-btn {
   position: absolute;
@@ -259,7 +278,7 @@ body {
   border-radius: 50%;
 }
 .project-desc {
-  max-width: 650px;
+  max-width: 400px;
   font-family: Roboto, sans-serif;
   line-height: 1.3rem;
 }
