--- a/src/App.css
+++ b/src/App.css
@@ -160,6 +160,11 @@ body {
   animation-delay: 1.33s;
   animation-fill-mode: forwards;
 }
+.home-title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .burger {
   position: fixed;
   top: 25px;
@@ -483,5 +488,8 @@ body {
   }
   .contact-info-container > div {
     height: 315px;
+  }
+  .home-title {
+    align-items: flex-start;
   }
 }
