--- a/src/App.css
+++ b/src/App.css
@@ -484,6 +484,7 @@ body {
   }
   .big-thumb {
     height: 260px;
+    position: relative;
   }
   .contact-info-box {
     margin-left: -25px;
@@ -508,6 +509,8 @@ body {
     width: 100%;
     margin-right: 0;
     margin-bottom: 15px;
+    display: flex;
+    justify-content: center;
   }
   #chess-preview {
     height: calc(100vh - 88px);
