--- a/src/App.css
+++ b/src/App.css
@@ -284,7 +284,7 @@ body {
   font-size: 2rem;
   box-shadow: none;
   border: 2px solid black;
-  border-radius: 50%;
+  border-radius: 100px;
 }
 .project-desc {
   max-width: 400px;
