--- a/src/App.css
+++ b/src/App.css
@@ -103,8 +103,9 @@ body {
   position: fixed;
   top: 0;
   right: -250px;
-  z-index: 99;
+  z-index: 3;
   background-color: #f5f5f5;
+  font-weight: 600;
 }
 #navbar li {
   font-size: 3rem;
@@ -112,8 +113,8 @@ body {
   cursor: pointer;
 }
 .prof-pic {
-  width: 250px;
-  height: 250px;
+  width: 300px;
+  height: 300px;
   border: 7px solid black;
   border-radius: 50%;
   background: white;
@@ -303,22 +304,19 @@ body {
 }
 .line-work {
   width: 0;
-  height: 2px;
-  margin-top: 5px;
+  height: 7px;
   background: black;
   transition: width 1s;
 }
 .line-about {
   width: 0;
-  height: 2px;
-  margin-top: 5px;
+  height: 7px;
   background: black;
   transition: width 1s;
 }
 .line-contact {
   width: 0;
-  height: 2px;
-  margin-top: 5px;
+  height: 7px;
   background: black;
   transition: width 1s;
 }
@@ -343,6 +341,7 @@ body {
   flex-direction: column;
   align-items: flex-end;
   font-size: 3rem;
+  font-weight: 600;
 }
 .bar {
   height: 0;
@@ -384,6 +383,9 @@ body {
   margin-right: 1000px;
   transition: margin-right 0.5s 1.1s;
 }
+.phone {
+  font-weight: 600;
+}
 .phone:nth-child(1) {
   margin-left: 1000px;
   transition: margin-left 0.5s 1.3s;
@@ -395,6 +397,9 @@ body {
 .phone:nth-child(3) {
   margin-left: 1000px;
   transition: margin-left 0.5s 1.5s;
+}
+.email {
+  font-weight: 600;
 }
 .email:nth-child(1) {
   margin-left: 1000px;
