--- a/src/App.css
+++ b/src/App.css
@@ -86,7 +86,9 @@ body {
   min-height: 100vh;
 }
 .contact {
-  margin-top: 50px;
+  height: 100vh;
+  display: flex;
+  align-items: center;
 }
 .work {
   position: relative;
@@ -370,19 +372,19 @@ body {
 }
 .touch > h1:nth-child(1) {
   margin-right: 1000px;
-  transition: margin-right 0.5s 0.5s;
+  transition: margin-right 0.5s 0.2s;
 }
 .touch > h1:nth-child(2) {
   margin-right: 1000px;
-  transition: margin-right 0.5s 0.7s;
+  transition: margin-right 0.5s 0.4s;
 }
 .touch > h1:nth-child(3) {
   margin-right: 1000px;
-  transition: margin-right 0.5s 0.9s;
+  transition: margin-right 0.5s 0.6s;
 }
 .touch > h1:nth-child(4) {
   margin-right: 1000px;
-  transition: margin-right 0.5s 1.1s;
+  transition: margin-right 0.5s 0.8s;
 }
 .phone {
   font-weight: 600;
